--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,10 @@
 production:
-  adapter: sqlite3
+  adapter: sqlite
   dbfile: db/sinatter.db
   timeout: 5000
  
 development:
   production:
-  adapter: sqlite3
+  adapter: sqlite
   dbfile: db/sinatter-dev.db
   timeout: 5000
